Add dch entry for stable release 7.0.0
Change-Id: Ieeaa647f580c445f5fb3ec019027a1cc97f231aa

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-trove (1:7.0.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Stable release for Ocata
+
+ -- Andy Botting <andy@andybotting.com>  Wed, 22 Feb 2017 21:47:50 +0000
+
 openstack-trove (1:7.0.0~rc2-0ubuntu1) zesty; urgency=medium
 
   [ Chuck Short ]
