--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openstack-trove (1:8.0.0-0ubuntu1~cloud0ubuntu1) UNRELEASED; urgency=medium
+
+  * Nectar build for Pike
+
+ -- Andy Botting <andy@andybotting.com>  Sun, 17 Dec 2017 23:46:04 +0000
+
 openstack-trove (1:8.0.0-0ubuntu1~cloud0) xenial-pike; urgency=medium
 
   * New upstream release for the Ubuntu Cloud Archive.
